--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "@testing-library/react-hooks": "^7.0.2",
     "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
