--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,15 @@
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+    { "path": "./tsconfig.node.json" },
+    { "path": "./tsconfig.test.json" }
   ],
   "compilerOptions": {
-    "jsx": "react-jsx",
+    "strict": true,
     "esModuleInterop": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false
+    "jsx": "react-jsx",
+    "module": "esnext",
+    "target": "esnext",
+    "moduleResolution": "node"
   }
 }
